unpackaged/main/default/objects/Services_Project_Team_Member__c/Services_Project_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Services Project Team Member</label>
    <nameField>
        <label>Services Project Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services Project Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>