unpackaged/main/default/objects/Services_Project_Team_Member__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Services Project Team Members</relationshipLabel>
    <relationshipName>Services_Project_Team_Members</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>