unpackaged/main/default/objects/Services_Project_Team_Member__c/fields/Services_Project__c.field-meta.xml
<CustomField>
    <fullName>Services_Project__c</fullName>
    <label>Services Project</label>
    <referenceTo>Services_Project__c</referenceTo>
    <relationshipLabel>Services Project Team Members</relationshipLabel>
    <relationshipName>Services_Project_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>